compiler/testData/cli/jvm/multipleTextRangesInDiagnosticsOrder.kt
interface A {
    public konst c: Int
}

interface B: A {
    override protected private konst c: Int
}
